# flake8-import

./: .gitignore  Makefile  README.md  flake8_import.py  flake8_import.yaml  pyproject.toml  setup.py
tests/: example.py
