[tool.poetry]
name = "flake8-import"
version = "0.1.0"
description = ""
authors = ["shotat <shotat@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
astpretty = "^3.0.0"
black = "^22.10.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
